--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 const text = value[index];
                 if (left) {
                     currentProject.innerHTML +=
-                        '<a href="/sketches/' + text.id + '/">\
+                        '<a href="https://containrr.com/sketches/' + text.id + '/">\
                             <span class="screenshotProject left hoverable">\
                                 <img src="assets/screenshots/'+ text.id + '.png" />\
                                 <span>\
@@ -112,7 +112,7 @@
                         </a>';
                 } else {
                     currentProject.innerHTML +=
-                        '<a href="/sketches/' + text.id + '/">\
+                        '<a href="https://containrr.com/sketches/' + text.id + '/">\
                             <span class="screenshotProject right hoverable">\
                                 <span>\
                                     <p class="title">'+ text.title + '</p><br />\
