--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 new Project("tictactoe", "TicTacToe", "The classic"),
             ]],
             ["rust", [
-                new Project("wip", "PolySolver", "An app that finds all the roots of a polynomial"),
+                new Project("polynomialsolver", "PolySolver", "An app that finds all the roots of a polynomial"),
             ]],
         ]);
 
