--- a/index.html
+++ b/index.html
@@ -45,16 +45,16 @@
         <p class="title blueAnimation visible">And these are some of the projects I had the opportunity to work
             on:</p>
     </span><br>
-    <div class="bottom">
-        <div class="section flutter visible">
+   <div class="bottom">
+        <div class="section flutter visible" style="animation-delay:1.4s;">
             <div class="description qsandlightOutilne">Built with the Flutter SDK</div>
-        </div>
-        <div class="section rust visible">
+        <a href="https://containrr.com/sketches/rubikssolver/">                            <span class="screenshotProject left hoverable">                                <img src="assets/screenshots/rubikssolver.png" alt="Screenshot of the 'Rubik's Solver' flutter project">                                <span>                                    <p class="title">Rubik's Solver</p><br>                                    <p class="description">An arbitrary size magic cube solver</p>                                </span>                            </span>                        </a><a href="https://containrr.com/sketches/keyrunner/">                            <span class="screenshotProject right hoverable">                                <span>                                    <p class="title">Key Runner</p><br>                                    <p class="description">A minimalist speed typing game</p>                                </span>                                <img src="assets/screenshots/keyrunner.png" alt="Screenshot of the 'Key Runner' flutter project">                            </span>                        </a><a href="https://containrr.com/sketches/infinimines/">                            <span class="screenshotProject left hoverable">                                <img src="assets/screenshots/infinimines.png" alt="Screenshot of the 'Infini-Mines' flutter project">                                <span>                                    <p class="title">Infini-Mines</p><br>                                    <p class="description">An infinite mine clearing game</p>                                </span>                            </span>                        </a><a href="https://containrr.com/sketches/quintis/">                            <span class="screenshotProject right hoverable">                                <span>                                    <p class="title">Quintis</p><br>                                    <p class="description">A block stacking game with customisable pieces</p>                                </span>                                <img src="assets/screenshots/quintis.png" alt="Screenshot of the 'Quintis' flutter project">                            </span>                        </a><a href="https://containrr.com/sketches/tictactoe/">                            <span class="screenshotProject left hoverable">                                <img src="assets/screenshots/tictactoe.png" alt="Screenshot of the 'TicTacToe' flutter project">                                <span>                                    <p class="title">TicTacToe</p><br>                                    <p class="description">The classic</p>                                </span>                            </span>                        </a></div>
+        <div class="section rust visible" style="animation-delay:1.6s;">
             <div class="description qsandlightOutilne">Built with Rust</div>
-        </div>
-        <span class="links-box visible">
-            <div class="links"></div>
-            <p class="copyright">&copy; 2023 Nicon-Georgian Albu</p>
+        <a href="https://containrr.com/sketches/polynomialsolver/">                            <span class="screenshotProject right hoverable">                                <span>                                    <p class="title">PolySolver</p><br>                                    <p class="description">An app that finds all the roots of a polynomial</p>                                </span>                                <img src="assets/screenshots/polynomialsolver.png" alt="Screenshot of the 'PolySolver' rust project">                            </span>                        </a></div>
+        <span class="links-box visible" style="animation-delay:1.8s;">
+            <div class="links"><a href="https://www.instagram.com/ANicon101/">                    <img src="assets/logos/instagram.svg" alt="Nicon-Georgian Albu's Instagram Account">                </a><a href="https://www.facebook.com/ANicon111">                    <img src="assets/logos/facebook.png" alt="Nicon-Georgian Albu's Facebook Account">                </a><a href="https://twitter.com/ANicon111">                    <img src="assets/logos/twitter.svg" alt="Nicon-Georgian Albu's Twitter? Account">                </a><a href="https://github.com/ANicon111">                    <img src="assets/logos/github.png" alt="Nicon-Georgian Albu's Github Account">                </a><a href="https://www.linkedin.com/in/ANicon111">                    <img src="assets/logos/linkedin.svg" alt="Nicon-Georgian Albu's Linkedin Account">                </a><a href="https://www.youtube.com/@ANicon111">                    <img src="assets/logos/youtube.png" alt="Nicon-Georgian Albu's Youtube Account">                </a><a href="https://www.reddit.com/user/ANicon101">                    <img src="assets/logos/reddit.png" alt="Nicon-Georgian Albu's Reddit Account">                </a></div>
+            <p class="copyright">© 2023 Nicon-Georgian Albu</p>
         </span>
     </div>
 </body>
@@ -106,6 +106,7 @@
         ];
 
         //adding projects
+        /*
         var left = true;
         projects.forEach(function (value, key) {
             var currentProject = document.body.getElementsByClassName(key)[0];
@@ -150,6 +151,7 @@
                     <img src="assets/logos/'+ text.img + '"  alt="Nicon-Georgian Albu\'s ' + text.alt + '"/>\
                 </a>';
         }
+        */
 
         //running animation quickly on further visits
         if (document.cookie != "") {
