--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <img class="visible backgroundLogo" src="assets/icon.png" alt="Nicon-Georgian Albu's personal logo" />
     <span class="top">
         <div class="visible design"></div>
-        <h1 style="opacity:0; position:fixed; top:-100vmax;">Hello there, my name is Nicon-Georgian Albu and I'm also known
+        <h1 style="opacity:0; position:fixed; top:-100vmax;">Hello there, my name is Nicon-Georgian Albu and I'm also
+            known
             as ANicon111 online. I'm a full stack developer with experience in Flutter, Rust, C/C++, SQL, HTML, CSS and
             Javascript. And these are some of the projects I had the opportunity to work on:</h1>
         <p class="introduction blueAnimation left visible">Hello there, my name is</p>
@@ -45,15 +46,59 @@
         <p class="title blueAnimation visible">And these are some of the projects I had the opportunity to work
             on:</p>
     </span><br>
-   <div class="bottom">
+    <div class="bottom">
         <div class="section flutter visible" style="animation-delay:1.4s;">
             <div class="description qsandlightOutilne">Built with the Flutter SDK</div>
-        <a href="https://containrr.com/sketches/rubikssolver/">                            <span class="screenshotProject left hoverable">                                <img src="assets/screenshots/rubikssolver.png" alt="Screenshot of the 'Rubik's Solver' flutter project">                                <span>                                    <p class="title">Rubik's Solver</p><br>                                    <p class="description">An arbitrary size magic cube solver</p>                                </span>                            </span>                        </a><a href="https://containrr.com/sketches/keyrunner/">                            <span class="screenshotProject right hoverable">                                <span>                                    <p class="title">Key Runner</p><br>                                    <p class="description">A minimalist speed typing game</p>                                </span>                                <img src="assets/screenshots/keyrunner.png" alt="Screenshot of the 'Key Runner' flutter project">                            </span>                        </a><a href="https://containrr.com/sketches/infinimines/">                            <span class="screenshotProject left hoverable">                                <img src="assets/screenshots/infinimines.png" alt="Screenshot of the 'Infini-Mines' flutter project">                                <span>                                    <p class="title">Infini-Mines</p><br>                                    <p class="description">An infinite mine clearing game</p>                                </span>                            </span>                        </a><a href="https://containrr.com/sketches/quintis/">                            <span class="screenshotProject right hoverable">                                <span>                                    <p class="title">Quintis</p><br>                                    <p class="description">A block stacking game with customisable pieces</p>                                </span>                                <img src="assets/screenshots/quintis.png" alt="Screenshot of the 'Quintis' flutter project">                            </span>                        </a><a href="https://containrr.com/sketches/tictactoe/">                            <span class="screenshotProject left hoverable">                                <img src="assets/screenshots/tictactoe.png" alt="Screenshot of the 'TicTacToe' flutter project">                                <span>                                    <p class="title">TicTacToe</p><br>                                    <p class="description">The classic</p>                                </span>                            </span>                        </a></div>
+            <a href="https://containrr.com/sketches/rubikssolver/"> <span class="screenshotProject left hoverable"> <img
+                        src="assets/screenshots/rubikssolver.png"
+                        alt="Screenshot of the 'Rubik's Solver' flutter project"> <span>
+                        <p class="title">Rubik's Solver</p><br>
+                        <p class="description">An arbitrary size magic cube solver</p>
+                    </span> </span> </a><a href="https://containrr.com/sketches/keyrunner/"> <span
+                    class="screenshotProject right hoverable"> <span>
+                        <p class="title">Key Runner</p><br>
+                        <p class="description">A minimalist speed typing game</p>
+                    </span> <img src="assets/screenshots/keyrunner.png"
+                        alt="Screenshot of the 'Key Runner' flutter project"> </span> </a><a
+                href="https://containrr.com/sketches/infinimines/"> <span class="screenshotProject left hoverable"> <img
+                        src="assets/screenshots/infinimines.png" alt="Screenshot of the 'Infini-Mines' flutter project">
+                    <span>
+                        <p class="title">Infini-Mines</p><br>
+                        <p class="description">An infinite mine clearing game</p>
+                    </span> </span> </a><a href="https://containrr.com/sketches/quintis/"> <span
+                    class="screenshotProject right hoverable"> <span>
+                        <p class="title">Quintis</p><br>
+                        <p class="description">A block stacking game with customisable pieces</p>
+                    </span> <img src="assets/screenshots/quintis.png" alt="Screenshot of the 'Quintis' flutter project">
+                </span> </a><a href="https://containrr.com/sketches/tictactoe/"> <span
+                    class="screenshotProject left hoverable"> <img src="assets/screenshots/tictactoe.png"
+                        alt="Screenshot of the 'TicTacToe' flutter project"> <span>
+                        <p class="title">TicTacToe</p><br>
+                        <p class="description">The classic</p>
+                    </span> </span> </a>
+        </div>
         <div class="section rust visible" style="animation-delay:1.6s;">
             <div class="description qsandlightOutilne">Built with Rust</div>
-        <a href="https://containrr.com/sketches/polynomialsolver/">                            <span class="screenshotProject right hoverable">                                <span>                                    <p class="title">PolySolver</p><br>                                    <p class="description">An app that finds all the roots of a polynomial</p>                                </span>                                <img src="assets/screenshots/polynomialsolver.png" alt="Screenshot of the 'PolySolver' rust project">                            </span>                        </a></div>
+            <a href="https://containrr.com/sketches/polynomialsolver/"> <span class="screenshotProject right hoverable">
+                    <span>
+                        <p class="title">PolySolver</p><br>
+                        <p class="description">An app that finds all the roots of a polynomial</p>
+                    </span> <img src="assets/screenshots/polynomialsolver.png"
+                        alt="Screenshot of the 'PolySolver' rust project"> </span> </a>
+        </div>
         <span class="links-box visible" style="animation-delay:1.8s;">
-            <div class="links"><a href="https://www.instagram.com/ANicon101/">                    <img src="assets/logos/instagram.svg" alt="Nicon-Georgian Albu's Instagram Account">                </a><a href="https://www.facebook.com/ANicon111">                    <img src="assets/logos/facebook.png" alt="Nicon-Georgian Albu's Facebook Account">                </a><a href="https://twitter.com/ANicon111">                    <img src="assets/logos/twitter.svg" alt="Nicon-Georgian Albu's Twitter? Account">                </a><a href="https://github.com/ANicon111">                    <img src="assets/logos/github.png" alt="Nicon-Georgian Albu's Github Account">                </a><a href="https://www.linkedin.com/in/ANicon111">                    <img src="assets/logos/linkedin.svg" alt="Nicon-Georgian Albu's Linkedin Account">                </a><a href="https://www.youtube.com/@ANicon111">                    <img src="assets/logos/youtube.png" alt="Nicon-Georgian Albu's Youtube Account">                </a><a href="https://www.reddit.com/user/ANicon101">                    <img src="assets/logos/reddit.png" alt="Nicon-Georgian Albu's Reddit Account">                </a></div>
+            <div class="links">
+                <a href="https://www.instagram.com/ANicon101/"> <img src="assets/logos/instagram.svg"
+                        alt="Nicon-Georgian Albu's Instagram Account"> </a>
+                <a href="https://www.facebook.com/ANicon111">
+                    <img src="assets/logos/facebook.png" alt="Nicon-Georgian Albu's Facebook Account"> </a>
+                <a href="https://github.com/ANicon111"> <img src="assets/logos/github.png"
+                        alt="Nicon-Georgian Albu's Github Account"> </a>
+                <a href="https://www.linkedin.com/in/ANicon111"> <img src="assets/logos/linkedin.svg"
+                        alt="Nicon-Georgian Albu's Linkedin Account"> </a>
+                <a href="https://www.youtube.com/@ANicon111">
+                    <img src="assets/logos/youtube.png" alt="Nicon-Georgian Albu's Youtube Account"> </a>
+            </div>
             <p class="copyright">© 2023 Nicon-Georgian Albu</p>
         </span>
     </div>
@@ -98,7 +143,6 @@
         const links = [
             new Link("instagram.svg", "https://www.instagram.com/ANicon101/", "Instagram Account"),
             new Link("facebook.png", "https://www.facebook.com/ANicon111", "Facebook Account"),
-            new Link("twitter.svg", "https://twitter.com/ANicon111", "Twitter? Account"),
             new Link("github.png", "https://github.com/ANicon111", "Github Account"),
             new Link("linkedin.svg", "https://www.linkedin.com/in/ANicon111", "Linkedin Account"),
             new Link("youtube.png", "https://www.youtube.com/@ANicon111", "Youtube Account"),
