--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
         <div class="visible design"></div>
         <h1 style="opacity:0; position:fixed; top:-100vmax;">Hello there, my name is Nicon-Georgian Albu and I'm also
             known
-            as ANicon111 online. I'm a full stack developer with experience in Flutter, Rust, C/C++, SQL, HTML, CSS and
-            Javascript. And these are some of the projects I had the opportunity to work on:</h1>
+            as ANicon111 online. I'm a full stack developer with experience in Flutter, C#, C/C++, Rust, SQL, HTML, CSS and
+            Javascript. And these are some of my personal projects:</h1>
         <p class="introduction blueAnimation left visible">Hello there, my name is</p>
         <p class="name yellowAnimation visible">Nicon-Georgian Albu</p>
         <p class="nickname blueAnimation right visible">and I'm also known as ANicon111 online.</p>
         <p class="description yellowAnimation visible">I'm a full stack developer with experience in Flutter,
-            Rust, C/C++, SQL, HTML, CSS and Javascript.</p>
-        <p class="title blueAnimation visible">And these are some of the projects I had the opportunity to work
-            on:</p>
+            C#, C/C++, Rust, SQL, HTML, CSS and Javascript.</p>
+        <p class="title blueAnimation visible">And these are some of my personal projects:</p>
     </span><br>
     <div class="bottom">
         <div class="section flutter visible" style="animation-delay:1.4s;">
