--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Copyright © 2023 Nicon-Georgian Albu -->
+<!-- Copyright © 2024 Nicon-Georgian Albu -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -205,7 +205,12 @@
             }
         }
 
+        //setting current year to copyright <p>
+        document.getElementsByClassName("copyright")[0].innerHTML=`© ${new Date().getFullYear()} Nicon-Georgian Albu`;
+
         document.cookie = "visited=true;SameSite=Lax;expires=" + (new Date(Date.now() + (30 * 24 * 60 * 60 * 1000))).toUTCString() + ";path=/";
+
+
     </script>
 </footer>
 
