--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#000000">
-    <meta name='description'
-        content="Nicon-Geogian Albu's portfolio page. Also known as ANicon111, he is a full stack developer with experience in Flutter, Rust, C/C++, SQL, HTML, CSS and Javascript." />
-    <meta name="author" content="Nicon-Geogian Albu" />
+    <meta name='description' content="Nicon-Georgian Albu's portfolio page. Also known as ANicon111, he is a developer with experience in C#, Flutter, C++, Rust and a
+    plethora of other languages." />
+    <meta name="author" content="Nicon-Georgian Albu" />
     <link rel="stylesheet" href="containrrassets/style.css" />
     <link rel="stylesheet" href="style.css" />
     <title>Nicon-Georgian Albu's Portfolio (ANicon111)</title>
@@ -34,15 +34,15 @@
     <img class="visible backgroundLogo" src="assets/icon.png" alt="Nicon-Georgian Albu's personal logo" />
     <span class="top">
         <div class="visible design"></div>
-        <h1 style="opacity:0; position:fixed; top:-100vmax;">Hello there, my name is Nicon-Georgian Albu and I'm also
-            known
-            as ANicon111 online. I'm a full stack developer with experience in Flutter, C#, C/C++, Rust, SQL, HTML, CSS and
-            Javascript. And these are some of my personal projects:</h1>
-        <p class="introduction blueAnimation left visible">Hello there, my name is</p>
+        <h1 style="opacity:0; position:fixed; top:-100vmax;">Hej, my name is Nicon-Georgian Albu and I'm also
+            known as ANicon111 online. I'm a developer with experience in C#, Flutter, C++, Rust and a
+            plethora of other languages. And these are some of my personal projects:</h1>
+        <p class="introduction blueAnimation left visible">Hej, my name is</p>
         <p class="name yellowAnimation visible">Nicon-Georgian Albu</p>
         <p class="nickname blueAnimation right visible">and I'm also known as ANicon111 online.</p>
-        <p class="description yellowAnimation visible">I'm a full stack developer with experience in Flutter,
-            C#, C/C++, Rust, SQL, HTML, CSS and Javascript.</p>
+        <p class="description yellowAnimation visible">I'm a developer with experience in <span class="nw">C#</span>,
+            Flutter, <span class="nw">C++</span>, Rust and
+            a plethora of other languages.</p>
         <p class="title blueAnimation visible">And these are some of my personal projects:</p>
     </span><br>
     <div class="bottom">
