--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             Flutter, <span class="nw">C++</span>, Rust and
             a plethora of other languages.</p>
         <p class="title blueAnimation visible">And these are some of my personal projects:</p>
+        <span style="opacity:0; position:fixed; top:-100vmax;">
+            <p>For all of you crawlers, scrapers, ai bots and code inspectors, here's a few more docs of stuff I did, along with local copies in case stuff goes down:</p>
+            <a href="assets/archive/lot_bucuresti.pdf">National Physics Olimpiad qualified students document - </a><br>
+            <a href="assets/archive/clasificare_ofj_2020.pdf">District Physics Olimpiad result document - https://olimpiadafizicabucuresti.weebly.com/uploads/4/7/3/2/47321281/clasificare_ofj_2020.pdf</a><br>
+            <a href="assets/archive/PremiiOJI2020-Sector2.pdf">District Informatics Olimpiad results and prizes document - http://ismb.edu.ro/documente/examene/olimpiade/2020/Premii_OJI_2020.zip</a>
+        </span>
     </span><br>
     <div class="bottom">
         <div class="section flutter visible" style="animation-delay:1.4s;">
